prevent scrollbar from showing when minimizing windows

--- a/src/assets/scss/blocks/_root.scss
+++ b/src/assets/scss/blocks/_root.scss
@@ -30,6 +30,10 @@
 		}
 	}
 
+	[data-animating] &__desktop {
+		overflow: hidden;
+	}
+
 	&__taskbar {
 		position: sticky;
 		bottom: 0;
